--- a/analysis/Gene_Expression_Heatmap.Rmd
+++ b/analysis/Gene_Expression_Heatmap.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE, dev = "svg")
 ## Read data
 
 ```{r}
-data <- readr::read_csv("data/cfem_family_expression_level-2021.12.21.csv")
+data <- readr::read_csv("../data/cfem_family_expression_level-2021.12.21.csv")
 data
 ```
 
